--- a/index.html
+++ b/index.html
@@ -57,9 +57,6 @@
     <!-- ==================== End Loading ==================== -->
 
 
-    <div class="cursor"></div>
-
-
 
     <div id="smooth-wrapper">
 
@@ -275,8 +272,7 @@
                                         <img src="assets/imgs/serv-icons/1.png" alt="">
                                     </div>
                                     <h5 class="mb-15 text-u">FIMGA TO Tailwindcss</h5>
-                                    <p>Live workshop where we define the main problems and challenges before
-                                        building a strategic plan moving forward.</p>
+                                    <p>Tailwind CSS Benefits - Utility First Approach, Highly Customizable, No Unused CSS, Modern Framework, Performance Optimization.</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 items">
@@ -285,8 +281,7 @@
                                         <img src="assets/imgs/serv-icons/2.png" alt="">
                                     </div>
                                     <h5 class="mb-15 text-u">FIMGA TO BootStrap 5</h5>
-                                    <p>Live workshop where we define the main problems and challenges before
-                                        building a strategic plan moving forward.</p>
+                                    <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 items">
@@ -295,8 +290,7 @@
                                         <img src="assets/imgs/serv-icons/4.png" alt="">
                                     </div>
                                     <h5 class="mb-15 text-u">FIMGA TO <br> Vue.js & nuxt.js</h5>
-                                    <p>Live workshop where we define the main problems and challenges before
-                                        building a strategic plan moving forward.</p>
+                                    <p>Progressive JS Framework - a very lightweight, approachable, performant, and versatile framework for building web user interfaces.</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 items">
@@ -305,8 +299,7 @@
                                         <img src="assets/imgs/serv-icons/3.png" alt="">
                                     </div>
                                     <h5 class="mb-15 text-u">FIMGA to WordPress ACF</h5>
-                                    <p>Live workshop where we define the main problems and challenges before
-                                        building a strategic plan moving forward.</p>
+                                    <p>Advanced Custom Fields - enhances WordPress by enabling flexible, structured content management through custom fields.</p>
                                 </div>
                             </div>
                         </div>
@@ -551,13 +544,13 @@
 
 
                 <!-- ==================== Start Testimonials ==================== -->
-                <section class="testimonials section-padding pt-50 pt-lg-100" data-scroll-index="4">
+                <section class="testimonials section-padding pt-50" data-scroll-index="4">
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-4">
                                 <div class="sec-head">
                                     <h6 class="sub-title main-color mb-15">Testimonials</h6>
-                                    <h3 class="fw-600">What People <span class="fw-200">Say?</span></h3>
+                                    <h3 class="fw-600">What Client <span class="fw-200">Say?</span></h3>
                                 </div>
                             </div>
                             <div class="col-lg-8 position-re">
@@ -870,7 +863,7 @@
 
 
                 <!-- ==================== Start clients ==================== -->
-                <section class="clients-carso section-padding pt-0">
+                <section class="clients-carso section-padding pt-50 position-re">
                     <div class="container">
                         <div class="sec-bottom mb-100">
                             <div class="main-bg d-flex align-items-center">
@@ -996,7 +989,7 @@
                             <div class="col-lg-3">
                                 <div class="column ps-lg-4">
                                     <h6 class="sub-title mb-30">LATEST PROJECTS</h6>
-                                    <ul class="rest fz-14 project-list" style="max-width: 180px;">
+                                    <ul class="rest fz-16 project-list" style="max-width: 200px;">
                                         <li class="mb-15"><a href="" _blank="">Mixer - Online Advertising Site</a></li>
                                         <li class="mb-15"><a href="" _blank="">Hyion - HYIP Investment Site</a></li>
                                         <li class="mb-15"><a href="" _blank="">Kidsfun - Kids Learning Site</a></li>
@@ -1007,7 +1000,7 @@
                             <div class="col-lg-2">
                                 <div class="column">
                                     <h6 class="sub-title mb-30">QUICK INFORMATION</h6>
-                                    <ul class="rest fz-14">
+                                    <ul class="rest fz-16">
                                         <li class="mb-15">
                                             Total Projects: <span class="main-color">500+</span>
                                         </li>
@@ -1042,7 +1035,9 @@
     </div>
 
 
-
+    <a class="fixed-social" href="https://join.skype.com/invite/VbwQq5BnWjqn" target="_blank">
+        <img src="./assets/imgs/icons/skype.png" alt="icons">
+    </a>
 
     <!-- jQuery -->
     <script src="assets/js/jquery-3.6.0.min.js"></script>
