accescibility/seo --added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <!-- Metas -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1/>
+    <meta
+      name="keywords"
+      content="Front-end Developer, HTML5, CSS3, JavaScript (JS), Responsive Design, Cross-Browser Compatibility, Mobile-First Design, Web Performance Optimization, User Interface (UI) Development, User Experience (UX), CSS Animations, CSS Grid, Flexbox, SCSS/SASS, BEM (Block Element Modifier), Gulp, Grunt, Webpack, Version Control (Git), Pixel-Perfect Design, Cross-Device Compatibility, Component-Based Development, Vue.js Developer, Vue.js Framework, Vuex (State Management), Vue Router, Single Page Applications (SPA), Vue Components, Vue Directives, Vue CLI, Vue Composition API, Vue.js Lifecycle Hooks, Vue.js Animations, Vue.js Transitions, Vue.js Mixins, Vue.js Reusability, Vue.js Performance Optimization, Vue.js Best Practices, Nuxt.js Developer, Nuxt.js Framework, SSR (Server-Side Rendering), Static Site Generation (SSG), Nuxt.js Modules, Nuxt.js Plugins, Nuxt.js Routing, Nuxt.js Middleware, Nuxt.js Data Fetching, Nuxt.js SEO Optimization, Nuxt.js API Integration, Nuxt.js Store, Nuxt.js Performance, Nuxt.js Deployment, JAMstack with Nuxt.js, WordPress Developer, WordPress Customization, WordPress Theme Development, WordPress Plugin Development, WordPress REST API, WordPress Gutenberg, Advanced Custom Fields (ACF), WordPress Page Builders (Elementor, WPBakery), WooCommerce Development, WordPress Security, WordPress Performance Optimization, WordPress Multisite, WordPress SEO, WordPress Custom Post Types, WordPress Hooks & Filters, UI/UX Design, Full-Stack Development, Agile, Scrum, API Integration, RESTful Services, JSON, XML, Front-end Testing (Jest, Cypress), Tailwind CSS, Bootstrap, jQuery, SEO Best Practices, Accessibility (WCAG), Front-end Architecture, Modular CSS, Clean Code Practices, Code Reviews, Debugging, Continuous Integration, Continuous Deployment (CI/CD), Cloud Hosting (Netlify, Vercel), Progressive Web Apps (PWA), Web Components."
+    />
+    <meta
+      name="description"
+      content="With over five years of experience in front-end development, I’ve successfully completed over 300 projects for a wide range of clients, from innovative startups to large corporations. My commitment to delivering high-quality work ensures that each project not only meets but
+                          often exceeds client expectations, reflecting a strong dedication to excellence and client satisfaction."
+    />
     <meta name="author" content="Munna Ahmed" />
 
     <!-- Title  -->
@@ -115,7 +122,7 @@
 
       <div class="hamenu one-scroll">
         <div class="logo icon-img-100">
-          <img src="assets/imgs/logo-light.png" alt="" />
+          <img src="assets/imgs/logo-light.png" alt="img" />
         </div>
         <div class="close-menu cursor-pointer ti-close">
           <svg width="24px" height="24px" style="margin-top: -5px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -209,8 +216,8 @@
                   </ul>
                 </div>
                 <div class="item mb-40">
-                  <h6 class="sub-title mb-15 opacity-7">Contact Me</h6>
-                  <h5><a href="mail:msdmuanna77@email.com">msdmuanna77@email.com</a></h5>
+                  <h4 class="sub-title mb-15 opacity-7">Contact Me</h4>
+                  <h5><a href="mail:msdmunna77@email.com">msdmunna77@email.com</a></h5>
                   <h5 class="underline mt-10"><a href="tel:01400091582">+88 01400091582</a></h5>
                 </div>
               </div>
@@ -258,7 +265,7 @@
                 <div class="col-xl-3 col-md-6 items">
                   <div class="item-box bg">
                     <div class="icon mb-40">
-                      <img src="assets/imgs/serv-icons/1.png" alt="" />
+                      <img src="assets/imgs/serv-icons/1.png" alt="img" />
                     </div>
                     <h5 class="mb-15 text-u">FIMGA TO Tailwindcss</h5>
                     <p>Elevate your project with a Utility-First Design, Fully Customizable for your needs, Zero Waste with No Unused CSS, Built on a Modern Framework, and Optimized for Superior Performance.</p>
@@ -267,7 +274,7 @@
                 <div class="col-xl-3 col-md-6 items">
                   <div class="item-box bg">
                     <div class="icon mb-40">
-                      <img src="assets/imgs/serv-icons/2.png" alt="" />
+                      <img src="assets/imgs/serv-icons/2.png" alt="img" />
                     </div>
                     <h5 class="mb-15 text-u">FIMGA TO BootStrap 5</h5>
                     <p>Bring Figma designs to life as responsive, mobile-first websites using Bootstrap 5, the industry-standard framework for modern web development.</p>
@@ -276,7 +283,7 @@
                 <div class="col-xl-3 col-md-6 items">
                   <div class="item-box bg">
                     <div class="icon mb-40">
-                      <img src="assets/imgs/serv-icons/4.png" alt="" />
+                      <img src="assets/imgs/serv-icons/4.png" alt="img" />
                     </div>
                     <h5 class="mb-15 text-u">
                       FIMGA TO <br />
@@ -288,7 +295,7 @@
                 <div class="col-xl-3 col-md-6 items">
                   <div class="item-box bg">
                     <div class="icon mb-40">
-                      <img src="assets/imgs/serv-icons/3.png" alt="" />
+                      <img src="assets/imgs/serv-icons/3.png" alt="img" />
                     </div>
                     <h5 class="mb-15 text-u">FIMGA to WordPress ACF</h5>
                     <p>Unlock flexible and structured content management in WordPress with customizable fields for enhanced control.</p>
@@ -317,7 +324,7 @@
                       </div>
                       <div>
                         <div class="img fit-img radius-30">
-                          <img src="assets/imgs/intro/freelancer-intro.jpg" alt="" />
+                          <img src="assets/imgs/intro/freelancer-intro.jpg" alt="img" />
                         </div>
                       </div>
                     </div>
@@ -382,7 +389,7 @@
                               <h6 class="nowrap fz-16">Email :</h6>
                             </div>
                             <div class="ml-20">
-                              <p class="fz-14">msdmuanna77@gmail.com</p>
+                              <p class="fz-14">msdmunna77@gmail.com</p>
                             </div>
                           </div>
                         </div>
@@ -461,7 +468,7 @@
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img">
-                          <img src="assets/imgs/works/1/1.jpg" alt="" />
+                          <img src="assets/imgs/works/1/1.jpg" alt="img" />
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
@@ -470,7 +477,7 @@
                           </div>
                           <div class="ml-auto">
                             <a href="project3.html" class="rmore">
-                              <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20" />
+                              <img src="assets/imgs/arrow-right.png" alt="img" class="icon-img-20" />
                             </a>
                           </div>
                         </div>
@@ -479,7 +486,7 @@
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img">
-                          <img src="assets/imgs/works/1/2.jpg" alt="" />
+                          <img src="assets/imgs/works/1/2.jpg" alt="img" />
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
@@ -488,7 +495,7 @@
                           </div>
                           <div class="ml-auto">
                             <a href="project3.html" class="rmore">
-                              <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20" />
+                              <img src="assets/imgs/arrow-right.png" alt="img" class="icon-img-20" />
                             </a>
                           </div>
                         </div>
@@ -497,7 +504,7 @@
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img">
-                          <img src="assets/imgs/works/1/3.jpg" alt="" />
+                          <img src="assets/imgs/works/1/3.jpg" alt="img" />
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
@@ -506,7 +513,7 @@
                           </div>
                           <div class="ml-auto">
                             <a href="project3.html" class="rmore">
-                              <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20" />
+                              <img src="assets/imgs/arrow-right.png" alt="img" class="icon-img-20" />
                             </a>
                           </div>
                         </div>
@@ -515,7 +522,7 @@
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img">
-                          <img src="assets/imgs/works/1/4.jpg" alt="" />
+                          <img src="assets/imgs/works/1/4.jpg" alt="img" />
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
@@ -524,7 +531,7 @@
                           </div>
                           <div class="ml-auto">
                             <a href="project3.html" class="rmore">
-                              <img src="assets/imgs/arrow-right.png" alt="" class="icon-img-20" />
+                              <img src="assets/imgs/arrow-right.png" alt="img" class="icon-img-20" />
                             </a>
                           </div>
                         </div>
@@ -571,7 +578,7 @@
                               <div class="info d-flex align-items-center pt-40 mt-40 bord-thin-top">
                                 <div>
                                   <div class="fit-img circle">
-                                    <img src="assets/imgs/testim/t1.jpg" alt="" />
+                                    <img src="assets/imgs/testim/t1.jpg" alt="img" />
                                   </div>
                                 </div>
                                 <div class="ml-20">
@@ -602,7 +609,7 @@
                               <div class="info d-flex align-items-center pt-40 mt-40 bord-thin-top">
                                 <div>
                                   <div class="fit-img circle">
-                                    <img src="assets/imgs/testim/t5.jpg" alt="" />
+                                    <img src="assets/imgs/testim/t5.jpg" alt="img" />
                                   </div>
                                 </div>
                                 <div class="ml-20">
@@ -633,7 +640,7 @@
                               <div class="info d-flex align-items-center pt-40 mt-40 bord-thin-top">
                                 <div>
                                   <div class="fit-img circle">
-                                    <img src="assets/imgs/testim/t2.png" alt="" />
+                                    <img src="assets/imgs/testim/t2.png" alt="img" />
                                   </div>
                                 </div>
                                 <div class="ml-20">
@@ -664,7 +671,7 @@
                               <div class="info d-flex align-items-center pt-40 mt-40 bord-thin-top">
                                 <div>
                                   <div class="fit-img circle">
-                                    <img src="assets/imgs/testim/t13.jpg" alt="" />
+                                    <img src="assets/imgs/testim/t13.jpg" alt="img" />
                                   </div>
                                 </div>
                                 <div class="ml-20">
@@ -695,7 +702,7 @@
                               <div class="info d-flex align-items-center pt-40 mt-40 bord-thin-top">
                                 <div>
                                   <div class="fit-img circle">
-                                    <img src="assets/imgs/testim/t3.jpg" alt="" />
+                                    <img src="assets/imgs/testim/t3.jpg" alt="img" />
                                   </div>
                                 </div>
                                 <div class="ml-20">
@@ -726,7 +733,7 @@
                               <div class="info d-flex align-items-center pt-40 mt-40 bord-thin-top">
                                 <div>
                                   <div class="fit-img circle">
-                                    <img src="assets/imgs/testim/t4.jpg" alt="" />
+                                    <img src="assets/imgs/testim/t4.jpg" alt="img" />
                                   </div>
                                 </div>
                                 <div class="ml-20">
@@ -757,7 +764,7 @@
                               <div class="info d-flex align-items-center pt-40 mt-40 bord-thin-top">
                                 <div>
                                   <div class="fit-img circle">
-                                    <img src="assets/imgs/testim/t8.png" alt="" />
+                                    <img src="assets/imgs/testim/t8.png" alt="img" />
                                   </div>
                                 </div>
                                 <div class="ml-20">
@@ -788,7 +795,7 @@
                               <div class="info d-flex align-items-center pt-40 mt-40 bord-thin-top">
                                 <div>
                                   <div class="fit-img circle">
-                                    <img src="assets/imgs/testim/t8.png" alt="" />
+                                    <img src="assets/imgs/testim/t8.png" alt="img" />
                                   </div>
                                 </div>
                                 <div class="ml-20">
@@ -848,49 +855,49 @@
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img icon-img-130">
-                          <img src="assets/imgs/brands/b1.png" alt="" />
+                          <img src="assets/imgs/brands/b1.png" alt="img" />
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img icon-img-130">
-                          <img src="assets/imgs/brands/b2.png" alt="" />
+                          <img src="assets/imgs/brands/b2.png" alt="img" />
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img icon-img-100">
-                          <img src="assets/imgs/brands/b3.png" alt="" />
+                          <img src="assets/imgs/brands/b3.png" alt="img" />
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img icon-img-100">
-                          <img src="assets/imgs/brands/b4.png" alt="" />
+                          <img src="assets/imgs/brands/b4.png" alt="img" />
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img icon-img-130">
-                          <img src="assets/imgs/brands/b5.png" alt="" />
+                          <img src="assets/imgs/brands/b5.png" alt="img" />
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img icon-img-130">
-                          <img src="assets/imgs/brands/b6.png" alt="" />
+                          <img src="assets/imgs/brands/b6.png" alt="img" />
                         </div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img icon-img-150">
-                          <img src="assets/imgs/brands/b7.png" alt="" />
+                          <img src="assets/imgs/brands/b7.png" alt="img" />
                         </div>
                       </div>
                     </div>
@@ -936,13 +943,13 @@
               <div class="row">
                 <div class="col-lg-4">
                   <div class="logo icon-img-100">
-                    <img src="assets/imgs/logo-light.png" alt="" />
+                    <img src="assets/imgs/logo-light.png" alt="img" />
                   </div>
                 </div>
                 <div class="col-lg-3">
                   <div class="column">
                     <div class="mb-40">
-                      <h6 class="sub-title mb-30">Address</h6>
+                      <h4 class="sub-title mb-30">Address</h4>
                       <h5 class="opacity-8">
                         Khoksa - 7020 <br />
                         Kushtia, Bangladesh
