--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
             <div class="col-lg-3">
               <div class="cont-info">
                 <div class="item mb-50">
-                  <h6 class="sub-title mb-15 opacity-7">Address</h6>
-                  <h5>
+                  <h4 class="sub-title mb-15 opacity-7">Address</h4>
+                  <h4>
                     Khoksa - 7020 <br />
                     Kushtia, Bangladesh
-                  </h5>
+                  </h4>
                 </div>
                 <div class="item mb-50">
                   <h6 class="sub-title mb-15 opacity-7">LET'S TALK</h6>
@@ -217,8 +217,8 @@
                 </div>
                 <div class="item mb-40">
                   <h4 class="sub-title mb-15 opacity-7">Contact Me</h4>
-                  <h5><a href="mail:msdmunna77@email.com">msdmunna77@email.com</a></h5>
-                  <h5 class="underline mt-10"><a href="tel:01400091582">+88 01400091582</a></h5>
+                  <h4><a href="mail:msdmunna77@email.com">msdmunna77@email.com</a></h4>
+                  <h4 class="underline mt-10"><a href="tel:01400091582">+88 01400091582</a></h4>
                 </div>
               </div>
             </div>
@@ -267,7 +267,7 @@
                     <div class="icon mb-40">
                       <img src="assets/imgs/serv-icons/1.png" alt="img" />
                     </div>
-                    <h5 class="mb-15 text-u">FIMGA TO Tailwindcss</h5>
+                    <h4 class="mb-15 text-u">FIMGA TO Tailwindcss</h4>
                     <p>Elevate your project with a Utility-First Design, Fully Customizable for your needs, Zero Waste with No Unused CSS, Built on a Modern Framework, and Optimized for Superior Performance.</p>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                     <div class="icon mb-40">
                       <img src="assets/imgs/serv-icons/2.png" alt="img" />
                     </div>
-                    <h5 class="mb-15 text-u">FIMGA TO BootStrap 5</h5>
+                    <h4 class="mb-15 text-u">FIMGA TO BootStrap 5</h4>
                     <p>Bring Figma designs to life as responsive, mobile-first websites using Bootstrap 5, the industry-standard framework for modern web development.</p>
                   </div>
                 </div>
@@ -285,10 +285,10 @@
                     <div class="icon mb-40">
                       <img src="assets/imgs/serv-icons/4.png" alt="img" />
                     </div>
-                    <h5 class="mb-15 text-u">
+                    <h4 class="mb-15 text-u">
                       FIMGA TO <br />
                       Vue.js & nuxt.js
-                    </h5>
+                    </h4>
                     <p>Progressive JS Framework - experience a very lightweight, approachable, performant, and versatile framework for building web user interfaces.</p>
                   </div>
                 </div>
@@ -297,7 +297,7 @@
                     <div class="icon mb-40">
                       <img src="assets/imgs/serv-icons/3.png" alt="img" />
                     </div>
-                    <h5 class="mb-15 text-u">FIMGA to WordPress ACF</h5>
+                    <h4 class="mb-15 text-u">FIMGA to WordPress ACF</h4>
                     <p>Unlock flexible and structured content management in WordPress with customizable fields for enhanced control.</p>
                   </div>
                 </div>
@@ -343,7 +343,7 @@
                 <div class="col-lg-6 valign">
                   <div class="content full-width">
                     <div class="sec-head mb-30">
-                      <h6 class="sub-title mb-15 main-color">About Me</h6>
+                      <p class="sub-title mb-15 main-color">About Me</p>
                       <h2>
                         Frontend VueJS Developer <br />
                         & WordPress (ACF).
@@ -360,7 +360,7 @@
                         <div class="col-md-6">
                           <div class="d-flex align-items-center mb-20">
                             <div>
-                              <h6 class="nowrap fz-16">Name :</h6>
+                              <h4 class="nowrap fz-16">Name :</h4>
                             </div>
                             <div class="ml-20">
                               <p class="fz-14">Munna Ahmed</p>
@@ -368,7 +368,7 @@
                           </div>
                           <div class="d-flex align-items-center">
                             <div>
-                              <h6 class="nowrap fz-16">Address :</h6>
+                              <h4 class="nowrap fz-16">Address :</h4>
                             </div>
                             <div class="ml-20">
                               <p class="fz-14">Kushtia, Bangladesh</p>
@@ -378,7 +378,7 @@
                         <div class="col-md-6">
                           <div class="d-flex align-items-center mb-20">
                             <div>
-                              <h6 class="nowrap fz-16">Phone :</h6>
+                              <h4 class="nowrap fz-16">Phone :</h4>
                             </div>
                             <div class="ml-20">
                               <p class="fz-14"><a href="tel:01400091582">+88 01400091582</a></p>
@@ -386,7 +386,7 @@
                           </div>
                           <div class="d-flex align-items-center">
                             <div>
-                              <h6 class="nowrap fz-16">Email :</h6>
+                              <h4 class="nowrap fz-16">Email :</h4>
                             </div>
                             <div class="ml-20">
                               <p class="fz-14">msdmunna77@gmail.com</p>
@@ -472,7 +472,7 @@
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <h5>Nice guy with a smile</h5>
+                            <h4>Nice guy with a smile</h4>
                             <p>Graphic Designing</p>
                           </div>
                           <div class="ml-auto">
@@ -490,7 +490,7 @@
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <h5>Nice guy with a smile</h5>
+                            <h4>Nice guy with a smile</h4>
                             <p>Graphic Designing</p>
                           </div>
                           <div class="ml-auto">
@@ -508,7 +508,7 @@
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <h5>Nice guy with a smile</h5>
+                            <h4>Nice guy with a smile</h4>
                             <p>Graphic Designing</p>
                           </div>
                           <div class="ml-auto">
@@ -526,7 +526,7 @@
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <h5>Nice guy with a smile</h5>
+                            <h4>Nice guy with a smile</h4>
                             <p>Graphic Designing</p>
                           </div>
                           <div class="ml-auto">
@@ -582,7 +582,7 @@
                                   </div>
                                 </div>
                                 <div class="ml-20">
-                                  <h5>Zsolt Lázár</h5>
+                                  <h4>Zsolt Lázár</h4>
                                   <span class="sub-title main-color">Software Engineer - Hungary</span>
                                 </div>
                               </div>
@@ -613,7 +613,7 @@
                                   </div>
                                 </div>
                                 <div class="ml-20">
-                                  <h5>Angelica Pan</h5>
+                                  <h4>Angelica Pan</h4>
                                   <span class="sub-title main-color">Project Manager - usa</span>
                                 </div>
                               </div>
@@ -644,7 +644,7 @@
                                   </div>
                                 </div>
                                 <div class="ml-20">
-                                  <h5>Garth Soshahi</h5>
+                                  <h4>Garth Soshahi</h4>
                                   <span class="sub-title main-color">Founder & CEO - usa</span>
                                 </div>
                               </div>
@@ -675,7 +675,7 @@
                                   </div>
                                 </div>
                                 <div class="ml-20">
-                                  <h5>Martin Salgado</h5>
+                                  <h4>Martin Salgado</h4>
                                   <span class="sub-title main-color">Technical Writer - usa</span>
                                 </div>
                               </div>
@@ -706,7 +706,7 @@
                                   </div>
                                 </div>
                                 <div class="ml-20">
-                                  <h5>Claire Given</h5>
+                                  <h4>Claire Given</h4>
                                   <span class="sub-title main-color">Founder & Systems Expert - UK</span>
                                 </div>
                               </div>
@@ -737,7 +737,7 @@
                                   </div>
                                 </div>
                                 <div class="ml-20">
-                                  <h5>Arthur Carayon</h5>
+                                  <h4>Arthur Carayon</h4>
                                   <span class="sub-title main-color">Senior UI/UX Designer - france </span>
                                 </div>
                               </div>
@@ -768,7 +768,7 @@
                                   </div>
                                 </div>
                                 <div class="ml-20">
-                                  <h5>Waan Hogaaminaa</h5>
+                                  <h4>Waan Hogaaminaa</h4>
                                   <span class="sub-title main-color">Project Manager - Somalia</span>
                                 </div>
                               </div>
@@ -799,7 +799,7 @@
                                   </div>
                                 </div>
                                 <div class="ml-20">
-                                  <h5>Sam Haiden</h5>
+                                  <h4>Sam Haiden</h4>
                                   <span class="sub-title main-color">Founder & CEO - usa</span>
                                 </div>
                               </div>
