accescibility/seo --added

--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
                   <h4>
                     Khoksa - 7020 <br />
                     Kushtia, Bangladesh
-                  </h4>
+                  </h5>
                 </div>
                 <div class="item mb-50">
-                  <h6 class="sub-title mb-15 opacity-7">LET'S TALK</h6>
+                  <p class="sub-title mb-15 opacity-7">LET'S TALK</p>
                   <ul class="social-list social-list-two d-flex flex-wrap align-items-center justify-content-center">
                     <li>
                       <a href="https://api.whatsapp.com/send/?phone=8801400091582&amp;text&amp;type=phone_number&amp;app_absent=0" target="_blank">
@@ -256,7 +256,7 @@
           <section class="services-boxs section-padding pb-0" data-scroll-index="1">
             <div class="container">
               <div class="sec-head mb-60">
-                <h6 class="sub-title main-color mb-20">My Specialize</h6>
+                <p class="sub-title main-color mb-20">My Specialize</p>
                 <div class="pt-2 d-flex align-items-center">
                   <h2 class="fw-600 text-u ls1">What I Have <span class="fw-200">to Offer</span></h2>
                 </div>
@@ -436,7 +436,7 @@
           <section class="portfolio-carsouel section-padding" data-scroll-index="3">
             <div class="container">
               <div class="sec-head mb-80">
-                <h6 class="sub-title main-color mb-25">MY Portfolio</h6>
+                <p class="sub-title main-color mb-25">MY Portfolio</p>
                 <div class="bord pt-25 bord-thin-top d-flex align-items-center">
                   <h2>My featured <span class="fw-200">projects</span></h2>
                   <div class="ml-auto">
@@ -550,7 +550,7 @@
               <div class="row">
                 <div class="col-lg-4">
                   <div class="sec-head">
-                    <h6 class="sub-title main-color mb-15">Testimonials</h6>
+                    <p class="sub-title main-color mb-15">Testimonials</p>
                     <h3 class="fw-600">What Client <span class="fw-200">Say?</span></h3>
                   </div>
                 </div>
@@ -846,7 +846,7 @@
             <div class="container">
               <div class="sec-bottom mb-100">
                 <div class="main-bg d-flex align-items-center">
-                  <h6 class="fz-14 fw-400">More than <span class="fw-600">200+ clients </span> trusted me worldwide</h6>
+                  <h4 class="fz-14 fw-400">More than <span class="fw-600">200+ clients </span> trusted me worldwide</h4>
                 </div>
               </div>
               <div class="swiper5" data-carousel="swiper" data-items="5" data-loop="true" data-space="40">
@@ -912,7 +912,7 @@
           <footer class="clean-footer crev bg-img" data-scroll-index="5" data-background="assets/imgs/header/bg1.jpg" data-overlay-dark="10">
             <div class="container pb-40 section-padding ontop">
               <div class="cal-action pb-50 mb-80 text-center">
-                <h6 class="sub-title main-color mb-15">GET IN TOUCH</h6>
+                <p class="sub-title main-color mb-15">GET IN TOUCH</p>
                 <h2 class="fz-120 line-height-1">
                   <span class="rotate-text">LET'S TALK<span class="ml-30 fz-70 ti-arrow-top-right"></span></span>
                 </h2>
