accescibility/seo --added

--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
                   </ul>
                 </div>
                 <div class="item mb-40">
-                  <h4 class="sub-title mb-15 opacity-7">Contact Me</h4>
-                  <h4><a href="mail:msdmunna77@email.com">msdmunna77@email.com</a></h4>
-                  <h4 class="underline mt-10"><a href="tel:01400091582">+88 01400091582</a></h4>
+                  <p class="sub-title mb-15 opacity-7">Contact Me</p>
+                  <p><a href="mail:msdmunna77@email.com">msdmunna77@email.com</a></p>
+                  <p class="underline mt-10"><a href="tel:01400091582">+88 01400091582</a></p>
                 </div>
               </div>
             </div>
@@ -949,11 +949,11 @@
                 <div class="col-lg-3">
                   <div class="column">
                     <div class="mb-40">
-                      <h4 class="sub-title mb-30">Address</h4>
-                      <h5 class="opacity-8">
+                      <p class="sub-title mb-30">Address</p>
+                      <p class="opacity-8">
                         Khoksa - 7020 <br />
                         Kushtia, Bangladesh
-                      </h5>
+                      </p>
                     </div>
 
                     <a href="tel:01400091582" class="underline">
