accescibility/seo --added

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                         <div class="col-md-6">
                           <div class="d-flex align-items-center mb-20">
                             <div>
-                              <h4 class="nowrap fz-16">Name :</h4>
+                              <p class="nowrap fz-16">Name :</p>
                             </div>
                             <div class="ml-20">
                               <p class="fz-14">Munna Ahmed</p>
@@ -368,7 +368,7 @@
                           </div>
                           <div class="d-flex align-items-center">
                             <div>
-                              <h4 class="nowrap fz-16">Address :</h4>
+                              <p class="nowrap fz-16">Address :</p>
                             </div>
                             <div class="ml-20">
                               <p class="fz-14">Kushtia, Bangladesh</p>
@@ -378,7 +378,7 @@
                         <div class="col-md-6">
                           <div class="d-flex align-items-center mb-20">
                             <div>
-                              <h4 class="nowrap fz-16">Phone :</h4>
+                              <p class="nowrap fz-16">Phone :</p>
                             </div>
                             <div class="ml-20">
                               <p class="fz-14"><a href="tel:01400091582">+88 01400091582</a></p>
@@ -386,7 +386,7 @@
                           </div>
                           <div class="d-flex align-items-center">
                             <div>
-                              <h4 class="nowrap fz-16">Email :</h4>
+                              <p class="nowrap fz-16">Email :</p>
                             </div>
                             <div class="ml-20">
                               <p class="fz-14">msdmunna77@gmail.com</p>
@@ -963,7 +963,7 @@
                 </div>
                 <div class="col-lg-3">
                   <div class="column ps-lg-4">
-                    <h6 class="sub-title mb-30">LATEST PROJECTS</h6>
+                    <p class="sub-title mb-30">LATEST PROJECTS</p>
                     <ul class="rest fz-16 project-list" style="max-width: 200px">
                       <li class="mb-15"><a href="" _blank="">Mixer - Online Advertising Site</a></li>
                       <li class="mb-15"><a href="" _blank="">Hyion - HYIP Investment Site</a></li>
