accescibility/seo --added

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
             <div class="col-lg-3">
               <div class="cont-info">
                 <div class="item mb-50">
-                  <h4 class="sub-title mb-15 opacity-7">Address</h4>
-                  <h4>
+                  <p class="sub-title mb-15 opacity-7">Address</p>
+                  <p>
                     Khoksa - 7020 <br />
                     Kushtia, Bangladesh
                   </h5>
@@ -974,7 +974,7 @@
                 </div>
                 <div class="col-lg-2">
                   <div class="column">
-                    <h6 class="sub-title mb-30">QUICK INFORMATION</h6>
+                    <p class="sub-title mb-30">QUICK INFORMATION</p>
                     <ul class="rest fz-16">
                       <li class="mb-15">Total Projects: <span class="main-color">300+</span></li>
                       <li class="mb-15">Happy Client's: <span class="main-color">200+</span></li>
