accescibility/seo --added

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <div class="icon mb-40">
                       <img src="assets/imgs/serv-icons/1.png" alt="img" />
                     </div>
-                    <h4 class="mb-15 text-u">FIMGA TO Tailwindcss</h4>
+                    <p class="mb-15 text-u">FIMGA TO Tailwindcss</p>
                     <p>Elevate your project with a Utility-First Design, Fully Customizable for your needs, Zero Waste with No Unused CSS, Built on a Modern Framework, and Optimized for Superior Performance.</p>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
                     <div class="icon mb-40">
                       <img src="assets/imgs/serv-icons/2.png" alt="img" />
                     </div>
-                    <h4 class="mb-15 text-u">FIMGA TO BootStrap 5</h4>
+                    <p class="mb-15 text-u">FIMGA TO BootStrap 5</p>
                     <p>Bring Figma designs to life as responsive, mobile-first websites using Bootstrap 5, the industry-standard framework for modern web development.</p>
                   </div>
                 </div>
@@ -285,10 +285,10 @@
                     <div class="icon mb-40">
                       <img src="assets/imgs/serv-icons/4.png" alt="img" />
                     </div>
-                    <h4 class="mb-15 text-u">
+                    <p class="mb-15 text-u">
                       FIMGA TO <br />
                       Vue.js & nuxt.js
-                    </h4>
+                    </p>
                     <p>Progressive JS Framework - experience a very lightweight, approachable, performant, and versatile framework for building web user interfaces.</p>
                   </div>
                 </div>
@@ -297,7 +297,7 @@
                     <div class="icon mb-40">
                       <img src="assets/imgs/serv-icons/3.png" alt="img" />
                     </div>
-                    <h4 class="mb-15 text-u">FIMGA to WordPress ACF</h4>
+                    <p class="mb-15 text-u">FIMGA to WordPress ACF</p>
                     <p>Unlock flexible and structured content management in WordPress with customizable fields for enhanced control.</p>
                   </div>
                 </div>
@@ -490,7 +490,7 @@
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <h4>Nice guy with a smile</h4>
+                            <p>Nice guy with a smile</p>
                             <p>Graphic Designing</p>
                           </div>
                           <div class="ml-auto">
@@ -508,7 +508,7 @@
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <h4>Nice guy with a smile</h4>
+                            <p>Nice guy with a smile</p>
                             <p>Graphic Designing</p>
                           </div>
                           <div class="ml-auto">
@@ -526,7 +526,7 @@
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <h4>Nice guy with a smile</h4>
+                            <p>Nice guy with a smile</p>
                             <p>Graphic Designing</p>
                           </div>
                           <div class="ml-auto">
