accescibility/seo --added

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <h4>Nice guy with a smile</h4>
+                            <p>Nice guy with a smile</p>
                             <p>Graphic Designing</p>
                           </div>
                           <div class="ml-auto">
