accescibility/seo --added

--- a/index.html
+++ b/index.html
@@ -235,14 +235,11 @@
             <div class="valign bg-img" data-background="assets/imgs/background/1.jpg" data-overlay-dark="5">
               <div class="container pt-40">
                 <div class="caption">
-                  <div class="lg-text fw-600">
-                    <div class="text d-flex align-items-center justify-content-center">
-                      <span>HI, I'm Munna</span>
-                    </div>
-                    <div class="text"></div>
-                    <div class="text text-center">FRONTEND</div>
-                    <div class="text text-center">Vuejs DEVELOPER</div>
-                  </div>
+                  <h1 class="lg-text fw-600 text-center text-outline wave-text">
+                    <span>HI, I'm Munna</span>
+                    <span> FRONTEND </span>
+                    <span>Vuejs DEVELOPER</span>
+                  </h1>
                   <!-- <p>We combine forward-thinking design with modern technology to tell stories that
                                     transform
                                     and grow our partners brands.</p> -->
@@ -267,7 +264,7 @@
                     <div class="icon mb-40">
                       <img src="assets/imgs/serv-icons/1.png" alt="img" />
                     </div>
-                    <p class="mb-15 text-u">FIMGA TO Tailwindcss</p>
+                    <div class="mb-15 text-u">FIMGA TO Tailwindcss</div>
                     <p>Elevate your project with a Utility-First Design, Fully Customizable for your needs, Zero Waste with No Unused CSS, Built on a Modern Framework, and Optimized for Superior Performance.</p>
                   </div>
                 </div>
@@ -276,7 +273,7 @@
                     <div class="icon mb-40">
                       <img src="assets/imgs/serv-icons/2.png" alt="img" />
                     </div>
-                    <p class="mb-15 text-u">FIMGA TO BootStrap 5</p>
+                    <div class="mb-15 text-u">FIMGA TO BootStrap 5</div>
                     <p>Bring Figma designs to life as responsive, mobile-first websites using Bootstrap 5, the industry-standard framework for modern web development.</p>
                   </div>
                 </div>
@@ -285,10 +282,10 @@
                     <div class="icon mb-40">
                       <img src="assets/imgs/serv-icons/4.png" alt="img" />
                     </div>
-                    <p class="mb-15 text-u">
+                    <div class="mb-15 text-u">
                       FIMGA TO <br />
                       Vue.js & nuxt.js
-                    </p>
+                    </div>
                     <p>Progressive JS Framework - experience a very lightweight, approachable, performant, and versatile framework for building web user interfaces.</p>
                   </div>
                 </div>
@@ -297,7 +294,7 @@
                     <div class="icon mb-40">
                       <img src="assets/imgs/serv-icons/3.png" alt="img" />
                     </div>
-                    <p class="mb-15 text-u">FIMGA to WordPress ACF</p>
+                    <div class="mb-15 text-u">FIMGA to WordPress ACF</div>
                     <p>Unlock flexible and structured content management in WordPress with customizable fields for enhanced control.</p>
                   </div>
                 </div>
@@ -472,7 +469,7 @@
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <p>Nice guy with a smile</p>
+                            <p class="h4">Nice guy with a smile</p>
                             <p>Graphic Designing</p>
                           </div>
                           <div class="ml-auto">
@@ -490,7 +487,7 @@
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <p>Nice guy with a smile</p>
+                            <p class="h4">Nice guy with a smile</p>
                             <p>Graphic Designing</p>
                           </div>
                           <div class="ml-auto">
@@ -508,7 +505,7 @@
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <p>Nice guy with a smile</p>
+                            <p class="h4">Nice guy with a smile</p>
                             <p>Graphic Designing</p>
                           </div>
                           <div class="ml-auto">
@@ -526,7 +523,7 @@
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <p>Nice guy with a smile</p>
+                            <p class="h4">Nice guy with a smile</p>
                             <p>Graphic Designing</p>
                           </div>
                           <div class="ml-auto">
