--- a/index.html
+++ b/index.html
@@ -465,15 +465,17 @@
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img">
-                          <img src="assets/imgs/works/1/1.jpg" alt="img" />
+                          <img src="./assets/imgs/products/hyion.avif" alt="img" />
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <p class="h4">Nice guy with a smile</p>
-                            <p>Graphic Designing</p>
+                            <a href="/template/hyion">
+                              <p class="h4">Hyion - HYIP Investment HTML Template</p>
+                            </a>
+                            <p>Hyip</p>
                           </div>
                           <div class="ml-auto">
-                            <a href="project3.html" class="rmore">
+                            <a href="/template/hyion" class="rmore">
                               <img src="assets/imgs/arrow-right.png" alt="img" class="icon-img-20" />
                             </a>
                           </div>
@@ -483,15 +485,17 @@
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img">
-                          <img src="assets/imgs/works/1/2.jpg" alt="img" />
+                          <img src="./assets/imgs/products/sinek.png" alt="img" />
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <p class="h4">Nice guy with a smile</p>
-                            <p>Graphic Designing</p>
+                            <a href="/template/sinek">
+                              <p class="h4">Sinek - Currency Exchange HTML Template</p>
+                            </a>
+                            <p>Banking</p>
                           </div>
                           <div class="ml-auto">
-                            <a href="project3.html" class="rmore">
+                            <a href="/template/sinek" class="rmore">
                               <img src="assets/imgs/arrow-right.png" alt="img" class="icon-img-20" />
                             </a>
                           </div>
@@ -501,15 +505,17 @@
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img">
-                          <img src="assets/imgs/works/1/3.jpg" alt="img" />
+                          <img src="./assets/imgs/products/kidsfun.avif" alt="img" />
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <p class="h4">Nice guy with a smile</p>
-                            <p>Graphic Designing</p>
+                            <a href="/template/kidsfun">
+                              <p class="h4">Kidsfun - Kids Learning Platform HTML Template</p>
+                            </a>
+                            <p>LMS</p>
                           </div>
                           <div class="ml-auto">
-                            <a href="project3.html" class="rmore">
+                            <a href="/template/kidsfun" class="rmore">
                               <img src="assets/imgs/arrow-right.png" alt="img" class="icon-img-20" />
                             </a>
                           </div>
@@ -519,15 +525,37 @@
                     <div class="swiper-slide">
                       <div class="item">
                         <div class="img">
-                          <img src="assets/imgs/works/1/4.jpg" alt="img" />
+                          <img src="./assets/imgs/products/viserhost.avif" alt="img" />
                         </div>
                         <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
                           <div>
-                            <p class="h4">Nice guy with a smile</p>
-                            <p>Graphic Designing</p>
+                            <a href="/template/viserhost">
+                            <p class="h4">ViserHost - Hosting Business HTML Template</p>
+                            </a>
+                            <p>Hosting</p>
                           </div>
                           <div class="ml-auto">
-                            <a href="project3.html" class="rmore">
+                            <a href="/template/viserhost" class="rmore">
+                              <img src="assets/imgs/arrow-right.png" alt="img" class="icon-img-20" />
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="item">
+                        <div class="img">
+                          <img src="./assets/imgs/products/digihyip.png" alt="img" />
+                        </div>
+                        <div class="cont d-flex align-items-center mt-30 pb-15 bord-thin-bottom">
+                          <div>
+                            <a href="/template/digihyip">
+                            <p class="h4">Digihyip - Hyip Investment Platform Html Template</p>
+                            </a>
+                            <p>Hyip</p>
+                          </div>
+                          <div class="ml-auto">
+                            <a href="/template/digihyip" class="rmore">
                               <img src="assets/imgs/arrow-right.png" alt="img" class="icon-img-20" />
                             </a>
                           </div>
